fix generate command for azure stack

--- a/parts/k8s/addons/kubernetesmasteraddons-kube-dns-deployment.yaml
+++ b/parts/k8s/addons/kubernetesmasteraddons-kube-dns-deployment.yaml
@@ -92,6 +92,9 @@ spec:
         configMap:
           name: kube-dns
           optional: true
+      - name: ssl-certs-host
+        hostPath:
+          path: "/etc/ssl/certs"
       containers:
       - name: kubedns
         image: <img>
@@ -143,6 +146,9 @@ spec:
         volumeMounts:
         - name: kube-dns-config
           mountPath: /kube-dns-config
+        - name: ssl-certs-host
+          mountPath: "/etc/ssl/certs"
+          readOnly: true
       - name: dnsmasq
         image: <imgMasq>
         imagePullPolicy: IfNotPresent
@@ -182,6 +188,9 @@ spec:
         volumeMounts:
         - name: kube-dns-config
           mountPath: /etc/k8s/dns/dnsmasq-nanny
+        - name: ssl-certs-host
+          mountPath: "/etc/ssl/certs"
+          readOnly: true
       - name: sidecar
         image: <imgSidecar>
         imagePullPolicy: IfNotPresent
