--- a/parts/k8s/addons/kubernetesmasteraddons-kube-proxy-daemonset.yaml
+++ b/parts/k8s/addons/kubernetesmasteraddons-kube-proxy-daemonset.yaml
@@ -49,7 +49,7 @@ spec:
       hostNetwork: true
       volumes:
       - hostPath:
-          path: /usr/share/ca-certificates
+          path: /etc/ssl/certs
         name: ssl-certs-host
       - hostPath:
           path: /var/lib/kubelet/kubeconfig
