--- a/parts/k8s/manifests/kubernetesmaster-kube-addon-manager.yaml
+++ b/parts/k8s/manifests/kubernetesmaster-kube-addon-manager.yaml
@@ -21,6 +21,9 @@ spec:
     - name: msi
       mountPath: /var/lib/waagent/ManagedIdentity-Settings
       readOnly: true
+    - name: "ssl"
+      mountPath: /etc/ssl/certs
+      readOnly: true
   volumes:
   - name: addons
     hostPath:
@@ -28,3 +31,6 @@ spec:
   - name: msi
     hostPath:
       path: /var/lib/waagent/ManagedIdentity-Settings
+  - name: ssl
+    hostPath:
+      path: /etc/ssl/certs
