--- a/parts/k8s/manifests/kubernetesmaster-kube-controller-manager.yaml
+++ b/parts/k8s/manifests/kubernetesmaster-kube-controller-manager.yaml
@@ -22,6 +22,9 @@ spec:
         - name: msi
           mountPath: /var/lib/waagent/ManagedIdentity-Settings
           readOnly: true
+        - name: "ssl"
+          mountPath: /etc/ssl/certs
+          readOnly: true
   volumes:
     - name: etc-kubernetes
       hostPath:
@@ -32,3 +35,6 @@ spec:
     - name: msi
       hostPath:
         path: /var/lib/waagent/ManagedIdentity-Settings
+    - name: ssl
+      hostPath:
+        path: /etc/ssl/certs
