--- a/parts/k8s/kubernetesagentcustomdata.yml
+++ b/parts/k8s/kubernetesagentcustomdata.yml
@@ -177,7 +177,8 @@ write_files:
       "serviceManagementVMDNSSuffix": "{{WrapAsParameter "cloudprofileServiceManagementVMDNSSuffix"}}",
       "resourceManagerVMDNSSuffix": "{{WrapAsParameter "cloudprofileResourceManagerVMDNSSuffix"}}",
       "containerRegistryDNSSuffix": "{{WrapAsParameter "cloudprofileContainerRegistryDNSSuffix"}}",
-      "identitySystem": "{{WrapAsParameter "cloudprofileIdentitySystem"}}"
+      "identitySystem": "{{WrapAsParameter "cloudprofileIdentitySystem"}}",
+      "authMethod": "{{WrapAsParameter "cloudprofileAuthMethod"}}"
     }
 {{end}}
 
