--- a/parts/k8s/manifests/kubernetesmaster-kube-controller-manager-custom.yaml
+++ b/parts/k8s/manifests/kubernetesmaster-kube-controller-manager-custom.yaml
@@ -17,6 +17,10 @@ spec:
       env:
       - name: AZURE_ENVIRONMENT_FILEPATH
         value: "/etc/kubernetes/azurestackcloud.json"
+      - name: AZURE_GO_SDK_LOG_LEVEL
+        value: "DEBUG"
+      - name: AZURE_GO_SDK_LOG_FILE
+        value: "/root/sdklog.txt"
       volumeMounts:
         - name: etc-kubernetes
           mountPath: /etc/kubernetes
