--- a/parts/k8s/cloud-init/masternodecustomdata.yml
+++ b/parts/k8s/cloud-init/masternodecustomdata.yml
@@ -307,6 +307,8 @@ MASTER_CONTAINER_ADDONS_PLACEHOLDER
 {{end}}
 {{if IsAzureStackCloud }}
     AZURE_ENVIRONMENT_FILEPATH=/etc/kubernetes/azurestackcloud.json
+    AZURE_GO_SDK_LOG_LEVEL="DEBUG"
+    AZURE_GO_SDK_LOG_FILE="/root/sdklog.txt"
 {{end}}
 {{if IsKubernetesVersionGe "1.6.0"}}
   {{if AnyAgentIsLinux}}
