--- a/parts/k8s/cloud-init/masternodecustomdata.yml
+++ b/parts/k8s/cloud-init/masternodecustomdata.yml
@@ -289,7 +289,7 @@ write_files:
       {{if IsMasterVirtualMachineScaleSets}}
         server: <SERVERIP>
       {{else}}
-        server: {{WrapAsVerbatim "concat('https://', variables('masterPrivateIpAddrs')[copyIndex(variables('masterOffset'))], ':443')"}}
+        server: https://localhost:443
       {{end}}
     users:
     - name: client
@@ -363,7 +363,7 @@ MASTER_CONTAINER_ADDONS_PLACEHOLDER
     AZURE_ENVIRONMENT_FILEPATH=/etc/kubernetes/azurestackcloud.json
 {{end}}
 {{if AnyAgentIsLinux}}
-    KUBELET_REGISTER_NODE=--register-node=true
+    KUBELET_REGISTER_NODE=--register-node=false
     KUBELET_REGISTER_WITH_TAINTS=--register-with-taints=node-role.kubernetes.io/master=true:NoSchedule
 {{end}}
     #EOF
