--- a/parts/k8s/manifests/kubernetesmaster-kube-controller-manager-custom.yaml
+++ b/parts/k8s/manifests/kubernetesmaster-kube-controller-manager-custom.yaml
@@ -11,7 +11,7 @@ spec:
   hostNetwork: true
   containers:
     - name: kube-controller-manager
-      image: {{GetCCMImageReference}}
+      image: {{GetHyperkubeImageReference}}
       imagePullPolicy: IfNotPresent
       command: ["/hyperkube", "kube-controller-manager"]
       args: [{{GetK8sRuntimeConfigKeyVals .Properties.OrchestratorProfile.KubernetesConfig.ControllerManagerConfig}}]
