--- a/parts/k8s/cloud-init/artifacts/kubelet-standalone.service
+++ b/parts/k8s/cloud-init/artifacts/kubelet-standalone.service
@@ -29,9 +29,7 @@ ExecStartPre=/bin/bash -c "if [ $(nproc) -gt 8 ]; then /sbin/sysctl -w net.ipv4.
 ExecStartPre=-/sbin/ebtables -t nat --list
 ExecStartPre=-/sbin/iptables -t nat --numeric --list
 ExecStart=/usr/local/bin/kubelet \
-        --allow-privileged=true  \
-        --pod-manifest-path=/etc/kubernetes/manifests \
-        --pod-infra-container-image={{GetPodInfraContainerImage}} \
+        {{GetStandaloneKubeletConfig}} \
         --v=2 
         
 [Install]
