--- a/parts/k8s/manifests/kubernetesmaster-kube-addon-manager.yaml
+++ b/parts/k8s/manifests/kubernetesmaster-kube-addon-manager.yaml
@@ -4,6 +4,8 @@ metadata:
   name: kube-addon-manager
   namespace: kube-system
   version: v1
+  labels:
+    component: kube-addon-manager
 spec:
   priorityClassName: system-node-critical
   hostNetwork: true
