--- a/parts/k8s/addons/metrics-server.yaml
+++ b/parts/k8s/addons/metrics-server.yaml
@@ -145,6 +145,10 @@ spec:
 {{else}}
         beta.kubernetes.io/os: linux
 {{- end}}
+      tolerations:
+      - key: "node-role.kubernetes.io/master"
+        operator: "Exists"
+        effect: "NoSchedule"
 ---
 apiVersion: apiregistration.k8s.io/v1beta1
 kind: APIService
